# SwiftShader

./: .appveyor.yml  .bazelversion  .clang-format  .gitignore  .gitmodules  .travis.yml  0001-Export-extensions.patch  0001-Load-libraries-from-a-list-of-possible-names.patch  0001-Reference-release-both-the-image-and-parent-texture.patch  0001-destroy.patch  0001-silence.patch  0001-wip-android-2.patch  0001-wip-etc1-2.patch  0002-Avoid-resetting-the-EGL-error-code-on-client-context.patch  0002-Don-t-treat-A8R8G8B8-on-an-X8R8G8B8-display-as-a-slo.patch  0002-Support-GL_TEXTURE_2D-targets-in-glEGLImageTargetTex.patch  0002-clear-uniforms.patch  0003-Delete-EGL-images-only-after-eglDestroyImageKHR.patch  0003-Ignore-Android-EGL-config-attributes.patch  0003-destroy.patch  0003-ect1.patch  0004-half-vertex.patch  0004-union.patch  0004-wip-android.patch  0005-a.patch  0005-stash.patch  0006-b.patch  0007-c.patch  0008-d.patch  0009-e.patch  0010-f.patch  0011-g.patch  43395f3c.diff  78f438b7.diff  94e6da96.diff  AUTHORS  AUTHORS.txt  Android.bp  Android.mk  BUILD.bazel  (+37 more)
libs/Reactor/: CMakeLists.txt
src/API/: CMakeLists.txt  VkGetProcAddress.cpp  VkGetProcAddress.hpp  VkPromotedExtensions.cpp  VkStructConversion.hpp  libVulkan.cpp
src/Common/: BUILD.gn  CMakeLists.txt  CPUID.cpp  Configurator.cpp  Configurator.hpp  Debug.cpp  Debug.hpp  DebugAndroid.cpp  DebugAndroid.hpp  DebugGeneric.cpp  DebugGeneric.hpp  GrallocAndroid.cpp  GrallocAndroid.hpp  Half.cpp  Half.hpp  LTO.hpp  Math.cpp  Math.hpp  Memory.cpp  Memory.hpp  MetaMacro.hpp  MutexLock.hpp  RecursiveLock.hpp  Resource.cpp  Resource.hpp  SharedLibrary.cpp  SharedLibrary.hpp  SharedLibrary.hpp.bak  Socket.cpp  Socket.hpp  Thread.cpp  Thread.hpp  ThreadAnalyser.h  Timer.cpp  Timer.hpp  Trace.cpp  Trace.hpp  Types.hpp  Version.h  X11.cpp
src/Main/: BUILD.gn  CMakeLists.txt  Config.cpp  Config.hpp  FrameBuffer.cpp  FrameBuffer.hpp  FrameBufferAndroid.cpp  FrameBufferAndroid.hpp  FrameBufferDD.cpp  FrameBufferDD.hpp  FrameBufferFactoryOzone.cpp  FrameBufferFuchsia.cpp  FrameBufferGDI.cpp  FrameBufferGDI.hpp  FrameBufferOSX.hpp  FrameBufferOSX.mm  FrameBufferOzone.cpp  FrameBufferOzone.hpp  FrameBufferWin.cpp  FrameBufferWin.hpp  FrameBufferX11.cpp  FrameBufferX11.hpp  SwiftConfig.cpp  SwiftConfig.hpp  crc.h  libX11.cpp  libX11.hpp
src/OpenGL/common/: AndroidCommon.cpp  AndroidCommon.hpp  BUILD.gn  CMakeLists.txt  ExceptionSymbols.cpp  Image.cpp  Image.hpp  MatrixStack.cpp  MatrixStack.hpp  NameSpace.cpp  NameSpace.hpp  Object.cpp  Object.hpp  Surface.hpp  TextureImage.cpp  TextureImage.hpp  debug.cpp  debug.h
src/OpenGL/compiler/: AnalyzeCallDepth.cpp  AnalyzeCallDepth.h  Android.mk  BUILD.gn  BaseTypes.h  CMakeLists.txt  Common.h  Compiler.cpp  Compiler.h  Compiler.vcxproj  Compiler.vcxproj.filters  ConstantUnion.h  Diagnostics.cpp  Diagnostics.h  DirectiveHandler.cpp  DirectiveHandler.h  ExtensionBehavior.h  InfoSink.cpp  InfoSink.h  Initialize.cpp  Initialize.h  InitializeGlobals.h  InitializeParseContext.cpp  InitializeParseContext.h  IntermTraverse.cpp  Intermediate.cpp  MMap.h  OutputASM.cpp  OutputASM.h  ParseContext.cpp  ParseContext.h  ParseHelper.cpp  ParseHelper.h  PoolAlloc.cpp  PoolAlloc.h  Pragma.h  ShHandle.h  SymbolTable.cpp  SymbolTable.h  TranslatorASM.cpp  (+24 more)
src/OpenGL/libEGL/: Android.mk  BUILD.gn  CMakeLists.txt  Config.cpp  Config.h  Context.hpp  Display.cpp  Display.h  EGLSurface.cpp  EGLSurface.h  Image.hpp  OSXUtils.hpp  OSXUtils.mm  Surface.cpp  Surface.h  Surface.hpp  Sync.hpp  Texture.hpp  Texture2D.hpp  TypeInfo.cpp  defines.h  exports.map  libEGL.cbp  libEGL.cpp  libEGL.def  libEGL.hpp  libEGL.lds  libEGL.mk  libEGL.rc  libEGL.vcxproj  libEGL.vcxproj.filters  main.cpp  main.h
src/OpenGL/libGLESv2/: Android.mk  BUILD.gn  Buffer.cpp  Buffer.h  CMakeLists.txt  Context.cpp  Context.h  Device.cpp  Device.hpp  (+47 more)
src/Reactor/: Android.mk  Assert.cpp  Assert.hpp  BUILD.gn  CMakeLists.txt  CPUID.cpp  CPUID.hpp  Coroutine.hpp  CoroutineRuntime.cpp  DLL.cpp  DLL.hpp  Debug.cpp  Debug.hpp  EmulatedReactor.cpp  EmulatedReactor.hpp  ExecutableMemory.cpp  ExecutableMemory.hpp  LLVMAsm.cpp  LLVMJIT.cpp  LLVMNucleus.cpp  LLVMReactor.cpp  LLVMReactor.hpp  LLVMReactorDebugInfo.cpp  LLVMReactorDebugInfo.hpp  LLVMRoutine.cpp  LLVMRoutine.hpp  LLVMRoutineManager.cpp  LLVMRoutineManager.hpp  Main.cpp  Memory.cpp  Memory.hpp  MutexLock.hpp  Nucleus.cpp  Nucleus.hpp  OptimalIntrinsics.cpp  OptimalIntrinsics.hpp  OptimalReactor.cpp  OptimalReactor.hpp  Optimizer.cpp  Optimizer.hpp  (+37 more)
src/Renderer/: ASTC_Decoder.cpp  ASTC_Decoder.hpp  BUILD.gn  Blitter.cpp  Blitter.hpp  CMakeLists.txt  Clipper.cpp  Clipper.hpp  Color.cpp  Color.hpp  Context.cpp  Context.hpp  ETC_Decoder.cpp  ETC_Decoder.hpp  LRUCache.hpp  Matrix.cpp  Matrix.hpp  PixelProcessor.cpp  PixelProcessor.hpp  Plane.cpp  Plane.hpp  Point.cpp  Point.hpp  Polygon.hpp  Primitive.hpp  QuadRasterizer.cpp  QuadRasterizer.hpp  Rasterizer.cpp  Rasterizer.hpp  Renderer.cpp  Renderer.hpp  RoutineCache.hpp  Sampler.cpp  Sampler.hpp  SetupProcessor.cpp  SetupProcessor.hpp  Stream.hpp  Surface.cpp  Surface.hpp  TextureStage.cpp  (+7 more)
src/Vulkan/: .libVulkan.cpp.swp  Acquirable.hpp  BUILD.gn  CMakeLists.txt  DescriptorView.cpp  DescriptorView.hpp  SpecializationInfo.cpp  SpecializationInfo.hpp  Version.h  Version.hpp  VkBuffer.cpp  VkBuffer.hpp  VkBufferCollectionFUCHSIA.cpp  VkBufferCollectionFUCHSIA.hpp  VkBufferView.cpp  VkBufferView.hpp  VkCommandBuffer.cpp  VkCommandBuffer.hpp  VkCommandPool.cpp  VkCommandPool.hpp  VkConfig.h  VkConfig.hpp  VkDebug.cpp  VkDebug.hpp  VkDebugImage.cpp  VkDebugImage.hpp  VkDebugUtilsMessenger.cpp  VkDebugUtilsMessenger.hpp  VkDescriptorPool.cpp  VkDescriptorPool.hpp  VkDescriptorSet.cpp  VkDescriptorSet.hpp  VkDescriptorSetLayout.cpp  VkDescriptorSetLayout.hpp  VkDescriptorUpdateTemplate.cpp  VkDescriptorUpdateTemplate.hpp  VkDestroy.h  VkDestroy.hpp  VkDevice.cpp  VkDevice.hpp  (+97 more)
tests/VulkanWrapper/: CMakeLists.txt  DrawTester.cpp  DrawTester.hpp  Util.cpp  VulkanTester.cpp  VulkanTester.hpp
tools/get-gl-extensions/: CMakeLists.txt  main.cpp
(+2457 files in other folders)
