# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Need a separate config to ensure the warnings are added to the end.
config("swiftshader_common_private_config") {
  if (is_clang) {
    cflags = [
      "-DLOG_TAG=\"swiftshader_common\"",
      "-msse2",
    ]

    if (!is_debug) {
      cflags += [
        "-DNDEBUG",
        "-DANGLE_DISABLE_TRACE",
      ]
    }
  }
}

source_set("swiftshader_common") {
  sources = [
    "CPUID.cpp",
    "Configurator.cpp",
    "Debug.cpp",
    "Half.cpp",
    "Math.cpp",
    "Memory.cpp",
    "Resource.cpp",
    "Socket.cpp",
    "Thread.cpp",
    "Timer.cpp",
  ]

  configs += [
    ":swiftshader_common_private_config",
  ]
}